<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#4e8c86">

    <Button android:id="@+id/open_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_preferences"
        android:onClick="openPreference"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="43dp"
        android:background="#FFF1F68D"
        android:layout_toStartOf="@+id/btn_close"
        android:layout_toLeftOf="@+id/btn_close" />

    <Button android:id="@+id/open_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_sqlite"
        android:onClick="saveInDatabase"
        android:layout_alignTop="@+id/open_preferences"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/btn_close"
        android:layout_toEndOf="@+id/btn_close"
        android:background="#f1f68d" />


    <TextView android:id="@+id/saved_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/btn_close" 
        android:onClick="exitApp"
        android:background="#FFF1F68D" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_above="@+id/saved_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo_sjsu"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Android Data Storage Sample"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
