<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SQLiteActivity"
    android:background="#4e8c86">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/logo_sjsu"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="SQLite View"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/msg"
        android:layout_alignStart="@+id/msg"
        android:layout_above="@+id/msg"
        android:layout_alignRight="@+id/msg"
        android:layout_alignEnd="@+id/msg" />


    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="10"
        android:minLines="5"
        android:gravity="top|left"
        android:maxLines="15"
        android:inputType="textMultiLine"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/imageView2"
        android:maxLength="255"
        android:hint="@string/msg_hint"
        />

    <Button
        android:id="@+id/save_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_msg"
        android:onClick="saveMessage"
        android:textColor="#ff000000"
        android:background="#f1f68d"
        android:layout_below="@+id/msg"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="102dp" />

    <Button
        android:id="@+id/cancel_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_msg"
        android:onClick="cancelMessage"
        android:textColor="#000000"
        android:background="#f1f68d"
        android:layout_alignTop="@+id/save_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Blog Message: "
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/msg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:textColor="#ffffffff" />

</RelativeLayout>
